fix overflow x

--- a/src/generalcss.css
+++ b/src/generalcss.css
@@ -19,12 +19,12 @@
 }
 
 .body {
-  /* background-color: black; */
   background-image: url("/background.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 	font-family: 'Roboto', sans-serif;
+  overflow-x: hidden;
 }
 
 
